<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017-2024 The LineageOS Project
     Copyright (C) 2024 PixelOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Updater</string>
    <string name="display_name">Updater</string>

    <!-- Directory where the update files will be downloaded and stored.
         WARNING: The application can and will delete any unknown file. -->
    <string name="download_path" translatable="false">/data/system_updates/</string>

    <!--
    Optional placeholders replaced at runtime:
      {version} - Build version
      {device} - Device name
    -->
    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/pos-fog/ota/fifteen/fog.json</string>
    <string name="changelog_url" translatable="false">https://raw.githubusercontent.com/pos-fog/ota/fifteen/changelogs/fog.md</string>
    <string name="certified_prop_url" translatable="false">https://raw.githubusercontent.com/pos-fog/ota/fifteen/CertifiedProps/certified_build_props.json</string>

    <string name="verification_failed_notification">Verification failed</string>
    <string name="verifying_download_notification">Verifying update</string>
    <string name="downloading_notification">Downloading</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_paused_error_notification">Download error</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="update_failed_notification">Update failed</string>
    <string name="installation_suspended_notification">Installation suspended</string>

    <string name="new_updates_found_title">New updates</string>

    <string name="text_download_speed">%1$s, %2$s/s</string>

    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="suspend_button">Suspend</string>

    <string name="installing_update">Installing update package</string>
    <string name="installing_update_error">Install error</string>
    <string name="installing_update_finished">Update installed</string>
    <string name="finalizing_package">Finalizing package installation</string>
    <string name="preparing_ota_first_boot">Preparing for first boot</string>
    <string name="dialog_prepare_zip_message">Preliminary update preparation</string>
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g id="percent_discharging">%1$d</xliff:g>%% of the battery to continue, <xliff:g id="percent_charging">%2$d</xliff:g>%% if charging.</string>
    <string name="dialog_scratch_mounted_message">
        <![CDATA[
        Please run the following commands and retry the update:\n
        • adb root\n
        • adb enable-verity\n
        • adb reboot
        ]]>
    </string>
    <string name="dialog_scratch_mounted_title">Cannot install update with OverlayFS mounted</string>

    <string name="menu_preferences">Preferences</string>
    <string name="menu_auto_updates_check">Automatic check for updates</string>
    <string name="menu_ab_perf_mode">A/B performance mode</string>
    <string name="menu_update_recovery">Update recovery</string>

    <string name="auto_updates_check_summary">Enable to check for updates automatically once every 14 days.</string>
    <string name="ab_perf_mode_summary">Increase priority of the update process. Might influence normal usage when an update is in progress.</string>
    <string name="update_recovery_summary">Enable to update recovery from the build automatically.</string>

    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_failed">The download failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_verification_failed">The update verification failed.</string>
    <string name="snack_download_verified">Download completed.</string>
    <string name="snack_update_not_installable">This update can\'t be installed on top of the current build.</string>

    <string name="header_android_version">Android version: <xliff:g example="7.1.2" id="version">%1$s</xliff:g></string>
    <string name="header_android_security_patch">Android security update: <xliff:g example="1" id="patch">%1$s</xliff:g></string>
    <string name="header_last_updates_check">Last successful check for update:\n<xliff:g example="1 January 1970" id="date">%1$s</xliff:g> (<xliff:g example="01:23" id="time">%2$s</xliff:g>)</string>

    <string name="list_build_version_date">PixelOS <xliff:g example="15" id="version">%1$s</xliff:g> - <xliff:g example="July 11, 2017" id="date">%2$s</xliff:g></string>
    <string name="list_download_progress_newer"><xliff:g example="12.2" id="filesize_without_unit">%1$s</xliff:g> of <xliff:g example="310 MB" id="filesize_without_unit">%2$s</xliff:g></string>
    <string name="list_verifying_update">Verifying update</string>

    <string name="action_download">Download</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_install">Install</string>
    <string name="action_delete">Cancel</string>
    <string name="action_cancel">Cancel</string>

    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the current downloading file?</string>

    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.</string>
    <string name="apply_update_dialog_message_ab">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing in the background.\n\nOnce completed, you will be prompted to reboot.</string>

    <string name="cancel_installation_dialog_message">Cancel the installation?</string>
    <string name="reboot_installation_dialog_message">Reboot to complete installation</string>

    <plurals name="eta_seconds">
        <item quantity="one">1 second left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> seconds left</item>
    </plurals>
    <plurals name="eta_minutes">
        <item quantity="one">1 minute left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes left</item>
    </plurals>
    <plurals name="eta_hours">
        <item quantity="one">1 hour left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours left</item>
    </plurals>

    <string name="update_over_metered_network_info">Metered connection warning</string>
    <string name="update_over_metered_network_message">Downloading updates, over a cellular network, metered Wi-Fi, or while roaming may cause additional charges.</string>

    <string name="new_updates_channel_title">New updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>
    <string name="update_failed_channel_title">Update failed</string>

    <string name="local_update_import">Local update</string>
    <string name="local_update_import_progress">Importing local update\u2026</string>
    <string name="local_update_import_success">%1$s has been imported. Do you want to install it?</string>
    <string name="local_update_import_failure">Failed to import local update</string>
    <string name="local_update_import_install">Install</string>

    <string name="check_for_update">Check for update</string>
    <string name="check_for_update_failed">Failed to check for update</string>
    <string name="system_up_to_date">Your system is up to date</string>
    <string name="system_update_available">System update available</string>

    <string name="checking_for_update">Checking for system update\u2026</string>
    <string name="system_update_downloading">Downloading system update</string>
    <string name="system_update_downloading_paused">Download paused</string>
    <string name="system_update_installing">Installing system update</string>
    <string name="system_update_verifying">Verifying system update</string>
    <string name="local_update_installing">Installing local update</string>

    <string name="general_header">General</string>
    <string name="play_integrity_header">Play Integrity</string>

    <string name="text_download_size_unknown">Unknown</string>

    <string name="certified_prop_overlay_name" translatable="false">co.aospa.android.certifiedprops.overlay</string>
    <string name="certified_prop_status">Certified properties status</string>
    <string name="certified_prop_check">Check for update</string>
    <string name="certified_prop_checking">Checking for certified properties update</string>
    <string name="certified_prop_downloading">Downloading certified properties update</string>
    <string name="certified_prop_download_failed">Unable to fetch properties from the server</string>
    <string name="certified_prop_available">Download and install</string>
    <string name="certified_prop_install_success">Reboot to apply update</string>
    <string name="certified_prop_install_failed">Failed to install</string>
    <string name="certified_prop_info" formatted="false">Installed version: %s\n</string>
    <string name="certified_prop_remote" formatted="false">Latest version: %s</string>

    <string name="fetch_changelogs_failed">Failed to fetch changelogs</string>

</resources>
