<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/updateIcon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="start|bottom"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_system_update"
                            app:tint="?attr/colorPrimary" />

                        <com.google.android.material.appbar.MaterialToolbar
                            android:id="@+id/toolbar"
                            android:layout_width="wrap_content"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_gravity="end" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/updateStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/system_up_to_date"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

                    <LinearLayout
                        android:id="@+id/updateStatusLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/updateInfoWarning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/snack_updates_check_failed"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@android:color/holo_red_light"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/buildInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/currentBuildVersion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/header_android_version"
                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                            <TextView
                                android:id="@+id/currentSecurityPatch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/header_android_security_patch"
                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                            <TextView
                                android:id="@+id/lastSuccessfulCheck"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/header_last_updates_check"
                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/downloadProgress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <com.google.android.material.progressindicator.LinearProgressIndicator
                                    android:id="@+id/progressBar"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1" />

                                <TextView
                                    android:id="@+id/progressPercent"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    tools:text="65%" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/progressText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                tools:text="162 of 1.1 GB (3 minutes left)" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/changelogSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/meteredWarningCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="?attr/actionBarSize"
                            android:backgroundTint="@color/background"
                            android:clickable="true"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="16dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/update_over_metered_network_info"
                                    android:src="@drawable/ic_info"
                                    app:tint="?attr/colorPrimary" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="12dp"
                                    android:text="@string/update_over_metered_network_message"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                            </LinearLayout>

                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/updateRefreshProgressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/updateRefreshProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:trackCornerRadius="24dp"
            app:trackThickness="12dp" />
    </FrameLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/secondaryButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/action_cancel"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/primaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/check_for_update" />
        </FrameLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
